--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
 						<iframe src="" frameborder="0"></iframe>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://twitter.com/ZacWJ" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/ZacWJ1/Pokemon-Universe" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
-					</footer>
+					
 
 			</div>
 		</div>
