--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Pokemon Universe</title>
+		<title>Poke Universe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Welcome to Pokemon Universe!</h1>
+						<h1>Welcome to Poke Universe!</h1>
 						<p>Type in a pokemon name to search the Pokemon cards from the Trading Card Game</p>
 						<input type="text">
 						<button class='search'>Search Pokemon</button>
